Installation
***********************************************
See INSTALL file for details

Changelog
***********************************************

Version 0.113
 Added:
  - Added "open prefix directory"\"open icon directory" menu items;
  - Added xdg-utils support (note: now it is in the depends list)
  - Added q4wine-cli console utility for wine applications and prefixes management.
  - Added libq4wine implementation;
  - Added translation file for Portuguese (Brazil) by Marcio Moraes;
  - Added *.xpm filter to icon import patten;
  - Added http proxy support for winetriks;
 Fixed:
  - Some fixes for q4wine.desktop (thx to Eugene Pivnev);
  - Fixed GUI bug: Text fields size, on some desktop configurations, are too small to edit;
  - Fixed a lot of English spelling errors (thx Sergey Kishchenko (tilarids));
  - First steps for source code documentation via Doxygen....;
  - Total code reorganize;
  - Database engine rewrite;

Version 0.112-r1
 Fixed:
  - Fixed compilation with Qt-4.4.X;
  - Removed QDir::Files from Directory selection dialogs;
  - Fixed compilation warning for registry.h;
  - Fixed warnings ignoring return value of 'int system(const char*)' on 1666 and 1647 lines;

Version 0.112
 core:
  New:
  - Added Sidebar Urls for Run and IconSettings file dialogs;
  - Wine Dlls path autodetections; (If not work on your system -- plz mail to me ;) )
  - You can disable icotools support in q4wine by adding -DWITH_ICOTOOLS=OFF to cmake;
  - Winetools support is disabled by default. You can enable it by adding -DWITH_WINETOOLS=ON to cmake args;
  - All developer stuff is disabled by default. You can enable it by adding -DWITH_DEVELOP_STUFF=ON to cmake args;
  - New database class;
  - kdesu\gksu support;
  Fixed:
  - Fixed import\export prefix functions;
  - Many small fixes;
  - Updated STDERR message catch function;
  - Added FreeBSD port patches by Dmitry Marakasov aka amdmi3;
  - Fixed readonly text field on prefix create;