@@ -7,7 +7,8 @@ Changelog
 
 Version 0.113
  Added:
-  - Added "open prefix directory"\"open icon directory" menu items;
+  - Added "open directory" menu items via xdg-utils;
+  - Added "open directory" menu items via winefile;
   - Added xdg-utils support (note: now it is in the depends list)
   - Added q4wine-cli console utility for wine applications and prefixes management.
   - Added libq4wine implementation;
